// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs disabled navigation item is rendered 1`] = `
.c5 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  border-bottom: 1px solid #d8d8d8;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: flext-start;
  -webkit-justify-content: flext-start;
  -ms-flex-pack: flext-start;
  justify-content: flext-start;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  border-top: 1px solid #d8d8d8;
  border-right: 1px solid #d8d8d8;
  border-bottom: 1px solid #ffffff;
  border-left: 1px solid #d8d8d8;
  cursor: default;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  border: undefined undefined undefined;
  color: #ccc !important;
  cursor: default;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
      <li
        className="c2"
      >
        <a
          className="c4"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c5"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Tabs navigation is rendered 1`] = `
.c5 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  border-bottom: 1px solid #d8d8d8;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: flext-start;
  -webkit-justify-content: flext-start;
  -ms-flex-pack: flext-start;
  justify-content: flext-start;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  border-top: 1px solid #ffffff;
  border-right: 1px solid #ffffff;
  border-left: 1px solid #ffffff;
}

.c3:hover,
.c3:active {
  background-color: #f7f7f7;
  border-bottom: 1px solid activeTabBorder;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  border-top: 1px solid #d8d8d8;
  border-right: 1px solid #d8d8d8;
  border-bottom: 1px solid #ffffff;
  border-left: 1px solid #d8d8d8;
  cursor: default;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
      <li
        className="c2"
      >
        <a
          className="c4"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c5"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Tabs navigation is rendered with custom padding 1`] = `
.c4 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  border-bottom: 1px solid #d8d8d8;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: flext-start;
  -webkit-justify-content: flext-start;
  -ms-flex-pack: flext-start;
  justify-content: flext-start;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: xl;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  border-top: 1px solid #d8d8d8;
  border-right: 1px solid #d8d8d8;
  border-bottom: 1px solid #ffffff;
  border-left: 1px solid #d8d8d8;
  cursor: default;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c4"
      disabled={false}
    />
  </div>
</div>
`;

exports[`TabsItem is rendered 1`] = `
.c0 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

<div>
  <div
    className="c0"
    disabled={false}
  />
</div>
`;

exports[`TabsItem is rendered with custom padding 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.c1 {
  margin: 0;
  padding: 1rem;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: xs;
  box-sizing: border-box;
}

.c3 {
  margin: 0;
  padding: smrem xsrem smrem xsrem;
  box-sizing: border-box;
}

.c4 {
  margin: 0;
  padding: xsrem xlrem lgrem smrem;
  box-sizing: border-box;
}

.c5 {
  margin: 0;
  padding: xs;
  box-sizing: border-box;
}

@media only screen and (min-width:48rem) {
  .c5 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    padding: lg;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    padding: xl;
  }
}

<div>
  <div
    className="c0"
    disabled={false}
  />
  <div
    className="c1"
    disabled={false}
  />
  <div
    className="c2"
    disabled={false}
  />
  <div
    className="c3"
    disabled={false}
  />
  <div
    className="c4"
    disabled={false}
  />
  <div
    className="c5"
    disabled={false}
  />
</div>
`;
